--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/slideshow.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/dotnav.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/slidenav.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/components/datepicker.css">
 
 
     
@@ -18,7 +19,7 @@
         <a href="" class="uk-navbar-brand">
             <img src="assets/images/tryp-02.png">
         </a>
-        <ul class="uk-navbar-nav">
+        <ul class="uk-navbar-nav uk-hidden-small">
             <li class="uk-active"><a href="">HOME</a></li>
             <li><a href="">HOTEL & CULTURE</a></li>
             <li><a href="">ROOMS & PRICES</a></li>
@@ -26,6 +27,7 @@
             <li><a href="">REWARDS</a></li>
             <li><a href="">BOOK NOW</a></li>
         </ul>
+        <a href="#toggler" class="uk-navbar-nav uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
     </nav>
 
     <div class="banner-slider">
@@ -35,7 +37,7 @@
                     <img src="assets/images/bg1-03.png" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1>WORLDLY AVENTURES AWAIT</h1>
+                            <h1>WORLDLY AVENTURES <br />AWAIT</h1>
                             <p>EXPLORE OUR HOTELS IN OVER 75 CITIES AROUNT THE GLOBE</p>
                         </div>
                     </div>
@@ -58,7 +60,7 @@
             <p>Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!</p>
         </div>
         <br/>
-        <div class="blocks">
+        <div class="blocks" style="padding-bottom: 0px;">
             <h1 class="button-styled">OUR HOTEL</h1>
             <p class="hashtag">#EsteEsMiTYRP</p>
             <p>Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!</p>
@@ -68,7 +70,7 @@
     <div class="rooms-prices">
         <div class="inner-card">
             <div class="nav">
-                <h1>ROOMS & PRICES</h1>
+                <h1>ROOMS</h1>
                 <div class="nav-arrows">
                     <button><i class="fa fa-arrow-left"></i></button>
                     <span class="page-number">1</span>/<span class="total-pages">10</span>
@@ -76,9 +78,7 @@
                 </div>
             </div>
             <div class="room-content">
-                <div class="room-image">
-                    <img src="assets/images/room1-04.png">
-                </div><div 
+                <div class="room-image" style="background:url('assets/images/room1-04.png')"></div><div 
                 class="room-details">
                     <h4>Standard Room</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et ac</p>
@@ -98,21 +98,71 @@
             </div><div 
             class="meeting-card">
                 <div class="image" style="background-image: url('assets/images/meetings-05.png')"></div>
-                <h4>MEETINGS AND EVENTS</h4>
-                <p>In TRYP hotel we are so passionate about making sure your event or meeting is perfect, like the city itself. From a meeting to a formal event, we offer you not only a central location, but also everything you need for you and your company to offer a fantastic experience.</p>
+                <h4>HAVE SUCCESS</h4>
+                <p>When it comes to meetings, we all want to contribute to creating the perfect working environment. Our meeting rooms are specifically designed to increase productivity and maintain a relaxed atmosphere. When you stay with us, the hotel will not only serve as the headquarters of your company, but our staff will be your most faithful temporary workforce. We also offer the best coffee breaks, which will leave a good taste in your mouth.</p>
             </div><div 
             class="meeting-card">
                 <div class="image" style="background-image: url('assets/images/meetings-05.png')"></div>
-                <h4>MEETINGS AND EVENTS</h4>
-                <p>In TRYP hotel we are so passionate about making sure your event or meeting is perfect, like the city itself. From a meeting to a formal event, we offer you not only a central location, but also everything you need for you and your company to offer a fantastic experience.</p>
+                <h4>BE HAPPY</h4>
+                <p>Whatever the event, an intimate wedding, a meeting or a great celebration, we take care of every detail so that you focus on enjoying your guests and your event. Our incredible chefs can prepare truly impressive and imaginative creations. We have developed an important range of menus that will conquer the most demanding palates, including children's menus and vegetarian dishes. Given the category of our standards, we can provide you with one option after another, but ultimately it is your day and everything should be to your liking ... the imagination will be your only limit. We simply give life to your imagination.</p>
             </div>
 
     </div>
 
+    <div class="rewards">
+        <div class="overlay container">
+            <h1 class="meeth1">YOUR REWARDS</h1>
+            <p>TRYP by Wyndham hotels offer you a first class experience and a fabulous time. But that's not enough: we want to give you more.</p>
+            <p>TRYP by Wyndham Hotels are part of the Wyndham Rewards®, a free-membership travel loyalty program sponsored by the Wyndham Hotel Group. As a member of Wyndham Rewards, you can earn points or air miles on all qualifying stays at more than 7800 hotels in 15 different locations around the world.</p>
+            <p>Wyndham Rewards is a simple program<br />We think everyone deserves a prize. That is why we facilitate obtaining points and your exchange for that special trip you have always wanted. Go ahead, you've earned them.</p>
+
+            <h3>What are you waiting?</h3>
+            <p>Register for free at <a href="">www.wyndhamrewards.com today.</a></p>
+        </div>
+    </div>
+
+    <div class="book-now container">
+        <h1 class="meeth1">
+            BOOK NOW
+        </h1>
+        <form class="uk-form">
+            <div class="input-form">
+                <label>First Name</label>
+                <input type="text" name="name">
+            </div>
+            <div class="input-form">
+                <label>Phone</label>
+                <input type="text" name="phone">
+            </div>
+            <br />
+            <div class="input-form">
+                <label>E-Mail</label>
+                <input type="text" name="email">
+            </div>
+            <div class="input-form date">
+                <label>Day Of Visit</label>
+                <input type="text" name="name" data-uk-datepicker="{format:'DD.MM.YYYY'}"><span class="inline">to</span><input type="text" name="" data-uk-datepicker="{format:'DD.MM.YYYY'}">
+            </div>
+        </form>
+    </div>
+
+    <div class="container social-media">
+        <h2>Follow Us</h2>
+        <ul>
+            <li><a href=""><i class="fa fa-facebook" style="padding-right: 11px;"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+            <li><a href=""><i class="fa fa-youtube"></i></a></li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>© 2017 TRYP Hotels Worldwide, Inc. All rights reserved. Privacy Notice Web Services User Agreement</p>
+    </footer>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/uikit.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/slideshow.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/datepicker.min.js"></script>
 </body>
 </html>
