--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="banner-slider wow fadeIn">
         <div class="uk-slidenav-position" data-uk-slideshow="{kenburns:true, autoplay:true}">
-            <ul class="uk-slideshow uk-overlay-active" data-uk-slideshow>
+            <ul class="uk-slideshow uk-overlay-active uk-slideshow-fullscreen" data-uk-slideshow>
                 <li>
                     <img src="assets/images/bg1-03.png" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
@@ -99,8 +99,23 @@
             <div class="room-content">
                 <div class="room-image" style="background:url('assets/images/room1-04.png')"></div><div 
                 class="room-details">
-                    <h4>Standard Room</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et ac</p>
+                    <h4>Fitness Room</h4>
+                    <span class="short-desc" style="font-size: 17px;">
+                        1 queen size bed, inside the room has a climber and a yoga mat.
+                    </span>
+                    <p>
+                        All rooms have the following facilities:
+                        <ul>
+                            <li>Minibar</li>  
+                            <li>Coffee maker</li>  
+                            <li>Regular coffee and decaffeinated coffee</li>  
+                            <li>2 complimentary bottles of water upon arrival</li>  
+                            <li>Iron and board inside the closet</li>  
+                            <li>Safety box</li>  
+                            <li>Hairdryer</li>  
+                            <li>Features of the Lavarino collection</li>  
+                        </ul>
+                    </p>
                 </div>
             </div>
         </div>
