--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         </div>
     </div>
     <div class="container about-us center">
-        <div class="blocks wow fadeInUp" data-wow-delay="1s">
+        <div class="blocks wow fadeInUp" data-wow-delay="0.5s">
             <h1 class="button-styled">OUR HOTEL</h1>
             <p class="hashtag">#EsteEsMiTYRP</p>
             <p>Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!</p>
         </div>
         <br/>
-        <div class="blocks wow fadeInUp" style="padding-bottom: 0px;" data-wow-delay="1s">
+        <div class="blocks wow fadeInUp" style="padding-bottom: 0px;" data-wow-delay="0.5s">
             <h1 class="button-styled">OUR HOTEL</h1>
             <p class="hashtag">#EsteEsMiTYRP</p>
             <p>Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!</p>
@@ -156,31 +156,31 @@
     </div>
 
     <div class="book-now container">
-        <h1 class="meeth1">
+        <h1 class="meeth1 wow fadeIn">
             BOOK NOW
         </h1>
         <form class="uk-form">
-            <div class="input-form">
+            <div class="input-form wow fadeInLeft">
                 <label>First Name</label>
                 <input type="text" name="name">
             </div>
-            <div class="input-form">
+            <div class="input-form wow fadeInRight">
                 <label>Phone</label>
                 <input type="text" name="phone">
             </div>
             <br />
-            <div class="input-form">
+            <div class="input-form wow fadeInLeft">
                 <label>E-Mail</label>
                 <input type="text" name="email">
             </div>
-            <div class="input-form date">
+            <div class="input-form date wow fadeInRight">
                 <label>Day Of Visit</label>
                 <input type="text" name="name" data-uk-datepicker="{format:'DD.MM.YYYY'}"><span class="inline">to</span><input type="text" name="" data-uk-datepicker="{format:'DD.MM.YYYY'}">
             </div>
         </form>
     </div>
 
-    <div class="container social-media">
+    <div class="container social-media wow fadeInUp">
         <h2>Follow Us</h2>
         <ul>
             <li><a href=""><i class="fa fa-facebook" style="padding-right: 11px;"></i></a></li>
