--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
         $window.trigger('scroll');*/
     </script>
     <script type="text/javascript">
-        new WOW().init();
+        new WOW().init({
+            mobile:false 
+        });
     </script>
 </body>
 </html>
