--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="banner-slider wow fadeIn">
+    <div class="banner-slider">
         <div class="uk-slidenav-position" data-uk-slideshow="{kenburns:true, autoplay:true}">
             <ul class="uk-slideshow uk-overlay-active uk-slideshow-fullscreen" data-uk-slideshow>
                 <li>
