--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <img src="assets/images/tryp-02.png">
         </a>
         <ul class="uk-navbar-nav uk-hidden-small">
-            <li class="uk-active"><a href="">HOME</a></li>
-            <li><a href="">HOTEL & CULTURE</a></li>
-            <li><a href="">ROOMS & PRICES</a></li>
-            <li><a href="">YOUR MEETINGS</a></li>
-            <li><a href="">REWARDS</a></li>
-            <li><a href="">BOOK NOW</a></li>
+            <li><a href="#Home" data-uk-smooth-scroll>HOME</a></li>
+            <li><a href="#HotelAndCulture" data-uk-smooth-scroll>HOTEL & CULTURE</a></li>
+            <li><a href="#RoomAndPrices" data-uk-smooth-scroll>ROOMS & PRICES</a></li>
+            <li><a href="#Meetings" data-uk-smooth-scroll>YOUR MEETINGS</a></li>
+            <li><a href="#Rewards" data-uk-smooth-scroll>REWARDS</a></li>
+            <li><a href="#BookNow" data-uk-smooth-scroll>BOOK NOW</a></li>
         </ul>
         <a href="#toggler" class="uk-navbar-nav uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
     </nav>
@@ -39,12 +39,12 @@
     <div id="toggler" class="uk-offcanvas">
         <div class="uk-offcanvas-bar">
             <ul>
-                <li class="uk-active"><a href="">HOME</a></li>
-                <li><a href="">HOTEL & CULTURE</a></li>
-                <li><a href="">ROOMS & PRICES</a></li>
-                <li><a href="">YOUR MEETINGS</a></li>
-                <li><a href="">REWARDS</a></li>
-                <li><a href="">BOOK NOW</a></li>
+                <li class="#uk-active" data-uk-smooth-scroll><a href="#Home">HOME</a></li>
+                <li><a href="#HotelAndCulture" data-uk-smooth-scroll>HOTEL & CULTURE</a></li>
+                <li><a href="#RoomAndPrices" data-uk-smooth-scroll>ROOMS & PRICES</a></li>
+                <li><a href="#Meetings" data-uk-smooth-scroll>YOUR MEETINGS</a></li>
+                <li><a href="#Rewards" data-uk-smooth-scroll>REWARDS</a></li>
+                <li><a href="#BookNow" data-uk-smooth-scroll>BOOK NOW</a></li>
             </ul>
         </div>
     </div>
@@ -72,7 +72,7 @@
             </ul> -->
         </div>
     </div>
-    <div class="container about-us center">
+    <div class="container about-us center" id="HotelAndCulture">
         <div class="blocks wow fadeInUp" data-wow-delay="0.5s">
             <h1 class="button-styled">OUR HOTEL</h1>
             <p class="hashtag">#EsteEsMiTYRP</p>
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div class="rooms-prices">
+    <div class="rooms-prices" id="RoomAndPrices">
         <div class="inner-card wow fadeIn">
             <div class="nav">
                 <h1>ROOMS</h1>
@@ -122,7 +122,7 @@
     </div>
 
 
-    <div class="meetings container">
+    <div class="meetings container" id="Meetings">
         <h1 class="meeth1">YOUR MEETINGS</h1>
 
             <div class="meeting-card wow fadeInLeft">
@@ -143,7 +143,7 @@
 
     </div>
 
-    <div class="rewards wow fadeInUp">
+    <div class="rewards wow fadeInUp" id="Rewards">
         <div class="overlay container">
             <h1 class="meeth1">YOUR REWARDS</h1>
             <p>TRYP by Wyndham hotels offer you a first class experience and a fabulous time. But that's not enough: we want to give you more.</p>
@@ -155,7 +155,7 @@
         </div>
     </div>
 
-    <div class="book-now container">
+    <div class="book-now container" id="BookNow">
         <h1 class="meeth1 wow fadeIn">
             BOOK NOW
         </h1>
@@ -199,6 +199,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/slideshow.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/datepicker.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/smooth-scroll.min.js"></script>
 
 
     <script type="text/javascript">
