adding last changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="rooms-prices" id="RoomAndPrices">
-        <div class="inner-card wow fadeIn">
+        <div class="inner-card wow fadeInUp">
             <div class="nav">
                 <h1>ROOMS</h1>
                 <div class="nav-arrows">
@@ -234,7 +234,7 @@
     </script>
     <script type="text/javascript">
         new WOW().init({
-            mobile:false 
+            
         });
     </script>
 </body>
