--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </div>
         <br/>
         <div class="blocks wow fadeInUp" style="padding-bottom: 0px;" data-wow-delay="0.5s">
-            <h1 class="button-styled">OUR HOTEL</h1>
-            <p class="hashtag">#EsteEsMiTYRP</p>
-            <p>Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!</p>
+            <h1 class="button-styled">OUR CULTURE</h1>
+            <p class="hashtag">#ExperienciaTRYP</p>
+            <p>Our passion for our guests only is comparable to our passion for the city. We invite you to explore and discover the best that México has to offer. Our local and up-to-date partners will advise you on the most authentic experiences available: From great local cuisine to fabulous nights in the city. We want you to drink, eat, rest and have Wi-Fi.</p>
         </div>
     </div>
 
@@ -131,12 +131,12 @@
                 <p>In TRYP hotel we are so passionate about making sure your event or meeting is perfect, like the city itself. From a meeting to a formal event, we offer you not only a central location, but also everything you need for you and your company to offer a fantastic experience.</p>
             </div><div 
             class="meeting-card wow fadeIn">
-                <div class="image" style="background-image: url('assets/images/meetings-05.png')"></div>
+                <div class="image" style="background-image: url('assets/images/Artboard6.png')"></div>
                 <h4>HAVE SUCCESS</h4>
                 <p>When it comes to meetings, we all want to contribute to creating the perfect working environment. Our meeting rooms are specifically designed to increase productivity and maintain a relaxed atmosphere. When you stay with us, the hotel will not only serve as the headquarters of your company, but our staff will be your most faithful temporary workforce. We also offer the best coffee breaks, which will leave a good taste in your mouth.</p>
             </div><div 
             class="meeting-card wow fadeInRight">
-                <div class="image" style="background-image: url('assets/images/meetings-05.png')"></div>
+                <div class="image" style="background-image: url('assets/images/Artboard7.png')"></div>
                 <h4>BE HAPPY</h4>
                 <p>Whatever the event, an intimate wedding, a meeting or a great celebration, we take care of every detail so that you focus on enjoying your guests and your event. Our incredible chefs can prepare truly impressive and imaginative creations. We have developed an important range of menus that will conquer the most demanding palates, including children's menus and vegetarian dishes. Given the category of our standards, we can provide you with one option after another, but ultimately it is your day and everything should be to your liking ... the imagination will be your only limit. We simply give life to your imagination.</p>
             </div>
