--- a/index.html
+++ b/index.html
@@ -53,7 +53,34 @@
         <div class="uk-slidenav-position" data-uk-slideshow="{kenburns:true, autoplay:true}">
             <ul class="uk-slideshow uk-overlay-active uk-slideshow-fullscreen" data-uk-slideshow>
                 <li>
-                    <img src="assets/images/bg1-03.png" width="800" height="400">
+                    <img src="assets/images/SLIDE1.jpg" width="800" height="400">
+                    <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
+                        <div class="overlay-inside-content">
+                            <h1>WORLDLY AVENTURES <br />AWAIT</h1>
+                            <p>EXPLORE OUR HOTELS IN OVER 75 CITIES AROUNT THE GLOBE</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="assets/images/SLIDE2.jpg" width="800" height="400">
+                    <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
+                        <div class="overlay-inside-content">
+                            <h1>WORLDLY AVENTURES <br />AWAIT</h1>
+                            <p>EXPLORE OUR HOTELS IN OVER 75 CITIES AROUNT THE GLOBE</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="assets/images/SLIDE3.jpg" width="800" height="400">
+                    <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
+                        <div class="overlay-inside-content">
+                            <h1>WORLDLY AVENTURES <br />AWAIT</h1>
+                            <p>EXPLORE OUR HOTELS IN OVER 75 CITIES AROUNT THE GLOBE</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img src="assets/images/SLIDE4.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
                             <h1>WORLDLY AVENTURES <br />AWAIT</h1>
@@ -91,17 +118,105 @@
             <div class="nav">
                 <h1>ROOMS</h1>
                 <div class="nav-arrows">
-                    <button><i class="fa fa-arrow-left"></i></button>
-                    <span class="page-number">1</span>/<span class="total-pages">10</span>
-                    <button><i class="fa fa-arrow-right"></i></button>
+                    <button class="nav-left"><i class="fa fa-arrow-left"></i></button>
+                    <span class="page-number">1</span>/<span class="total-pages">5</span>
+                    <button class="nav-right"><i class="fa fa-arrow-right"></i></button>
+                </div>
+            </div>
+            <div class="room-content active">
+                <div class="room-image" style="background:url('assets/images/STANDARD_ROOM.jpg')"></div><div 
+                class="room-details">
+                    <h4>Standard Room</h4>
+                    <span class="short-desc" style="font-size: 17px;">
+                        1 queen size bed
+                    </span>
+                    <p>
+                        All rooms have the following facilities:
+                        <ul>
+                            <li>Minibar</li>  
+                            <li>Coffee maker</li>  
+                            <li>Regular coffee and decaffeinated coffee</li>  
+                            <li>2 complimentary bottles of water upon arrival</li>  
+                            <li>Iron and board inside the closet</li>  
+                            <li>Safety box</li>  
+                            <li>Hairdryer</li>  
+                            <li>Features of the Lavarino collection</li>  
+                        </ul>
+                    </p>
                 </div>
             </div>
             <div class="room-content">
-                <div class="room-image" style="background:url('assets/images/room1-04.png')"></div><div 
+                <div class="room-image" style="background:url('assets/images/STANDARD_DOUBLE_ROOM.jpg')"></div><div 
+                class="room-details">
+                    <h4>Standard Double Room</h4>
+                    <span class="short-desc" style="font-size: 17px;">
+                        2 twin beds
+                    </span>
+                    <p>
+                        All rooms have the following facilities:
+                        <ul>
+                            <li>Minibar</li>  
+                            <li>Coffee maker</li>  
+                            <li>Regular coffee and decaffeinated coffee</li>  
+                            <li>2 complimentary bottles of water upon arrival</li>  
+                            <li>Iron and board inside the closet</li>  
+                            <li>Safety box</li>  
+                            <li>Hairdryer</li>  
+                            <li>Features of the Lavarino collection</li>  
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <div class="room-content">
+                <div class="room-image" style="background:url('assets/images/FITNESS_ROOM.jpg')"></div><div 
                 class="room-details">
                     <h4>Fitness Room</h4>
                     <span class="short-desc" style="font-size: 17px;">
                         1 queen size bed, inside the room has a climber and a yoga mat.
+                    </span>
+                    <p>
+                        All rooms have the following facilities:
+                        <ul>
+                            <li>Minibar</li>  
+                            <li>Coffee maker</li>  
+                            <li>Regular coffee and decaffeinated coffee</li>  
+                            <li>2 complimentary bottles of water upon arrival</li>  
+                            <li>Iron and board inside the closet</li>  
+                            <li>Safety box</li>  
+                            <li>Hairdryer</li>  
+                            <li>Features of the Lavarino collection</li>  
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <div class="room-content">
+                <div class="room-image" style="background:url('assets/images/PREMIUM_ROOM.jpg')"></div><div 
+                class="room-details">
+                    <h4>Premium Room</h4>
+                    <span class="short-desc" style="font-size: 17px;">
+                        2 twin beds and terrace.
+                    </span>
+                    <p>
+                        All rooms have the following facilities:
+                        <ul>
+                            <li>Minibar</li>  
+                            <li>Coffee maker</li>  
+                            <li>Regular coffee and decaffeinated coffee</li>  
+                            <li>2 complimentary bottles of water upon arrival</li>  
+                            <li>Iron and board inside the closet</li>  
+                            <li>Safety box</li>  
+                            <li>Hairdryer</li>  
+                            <li>Features of the Lavarino collection</li>  
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <div class="room-content">
+                <div class="room-image" style="background:url('assets/images/FAMILY_ROOM.jpg')"></div><div 
+                class="room-details">
+                    <h4>Family Room</h4>
+                    <span class="short-desc" style="font-size: 17px;">
+                        1 queen size bed, bunk bed and terrace.
                     </span>
                     <p>
                         All rooms have the following facilities:
@@ -152,6 +267,7 @@
 
             <h3>What are you waiting?</h3>
             <p>Register for free at <a href="">www.wyndhamrewards.com today.</a></p>
+            <img src="assets/images/Wyndham-Rewards-blue.png" style="margin-top: 20px;">
         </div>
     </div>
 
@@ -177,6 +293,8 @@
                 <label>Day Of Visit</label>
                 <input type="text" name="name" data-uk-datepicker="{format:'DD.MM.YYYY'}"><span class="inline">to</span><input type="text" name="" data-uk-datepicker="{format:'DD.MM.YYYY'}">
             </div>
+            <br />
+            <button class="uk-button uk-button-default submit">Submit</button>
         </form>
     </div>
 
@@ -236,6 +354,46 @@
         new WOW().init({
             
         });
+    </script>
+    <script type="text/javascript">
+
+        function navigateRooms(direction){
+            var pageNumber = parseInt($(".page-number").html());
+            if(direction == "right"){
+                console.log(pageNumber);
+                if(pageNumber < 5){
+                    var activeRoom = $('.room-content.active');
+                    activeRoom.removeClass('active');
+                    activeRoom.next().addClass('active');
+                    $(".page-number").html(pageNumber+1);
+                }
+                else
+                {
+                    /*$(".nav-right").attr("disabled", "disabled");*/
+                }
+            }
+            if(direction == "left"){
+                if(pageNumber > 1){
+                    var activeRoom = $('.room-content.active');
+                    activeRoom.removeClass('active');
+                    activeRoom.prev().addClass('active');
+                    $(".page-number").html(pageNumber-1);
+                }
+                else
+                {
+                    /*$(".nav-right").attr("disabled", "disabled");*/
+                }
+            }
+        }
+
+        $(".nav-left").click(function(){
+            navigateRooms('left');
+        })
+        $(".nav-right").click(function(){
+            navigateRooms('right');
+        })
+
+
     </script>
 </body>
 </html>
